=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Fixed: [ 1956830 ] (unknown) when name exists 
 - Fixed: Place Hierarchy: Small change to align "bubble" background for themes Simplygreen, Simplyblue and Simplyred. (windmillway)
 - Fixed: Lightbox: Various CSS errors corrected (windmillway)
 - Fixed: [ 1955259 ] Pedigree Link from Tree shows without detail by default (canajun2eh)
 - Fixed: [ 1952553 ] SVN 2931 - Related facts - wrong titles of events on INDI (canajun2eh)
 - Fixed: [ 1954352 ] Placename Issue On Language Change For Some Themes (canajun2eh)
 - Fixed: [ 1952626 ] Place Hierarchy with GoogleMap - Umlauts in Place Name (canajun2eh)
 - Fixed: [ 1952654 ] 4.1.6 2931 Fatal error familysearch.php on line 160 (fisharebest)

Version 4.1.5 2008-04-27
 - Fixed: [ 1952284 ] Unknown names print without the (unknown) text (fisharebest)
 - Fixed: [ 1952073 ] SVN 2918 - STATS, bad SURN numbers (fisharebest)
 - Added: Standardised interface to CMS applications such as joomla, drupal, postnuke, etc. (fisharebest)
 - Fixed: [ 1951591 ] Error in Hebrew Date Editing (fisharebest)
 - Fixed: [ 1951335 ] Privacy Warning on View GEDCOM for Media Even for Admin (fisharebest)
 - Fixed: [ 1950986 ] Remote Link - Person to Person, SVN 2899 (fisharebest)
 - Fixed: [ 1947687 ] [4.1.4] Edit link in Quick Update does not work (fisharebest)
 - Fixed: [ 1946362 ] SVN 2867 - Quick Update Links to wrong GEDCOM (fisharebest)
 - Fixed: [ 1950235 ] SVN2887- Search Bug (fisharebest)
 - Fixed: [ 1950232 ] PGSQL: Syntax-error in functions_db.php (fisharebest)
 - Fixed: FACT/TYPE not being checked for privacy rules when editing raw gedcom (fisharebest)
 - Fixed: [ 1933760 ] SVN 2799 use of function id_type (fisharebest)